roomname added for skynet fix 1